Archive2/28/23639134892991/output
main.cpp:13:9: warning: empty parentheses interpreted as a function declaration [-Wvexing-parse]
    A a1();    //even if i comment A(), the compiler will no warn me anything
        ^~
main.cpp:13:9: note: remove parentheses to declare a variable
    A a1();    //even if i comment A(), the compiler will no warn me anything
        ^~
main.cpp:15:16: error: no member named 'x' in 'A'
    cout << a2.x << endl;
            ~~ ^
main.cpp:10:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char** argv)
             ^
main.cpp:10:27: warning: unused parameter 'argv' [-Wunused-parameter]
int main(int argc, char** argv)
                          ^
3 warnings and 1 error generated.
